syntax = "proto3";

package promocode;

option go_package = "./";

message PromoCodeWithAmount {
  string promo_code = 1;
  int64 amount = 2;
  int64 restaurant = 3;
}

message PromoCodeWithRestaurantId {
  string promo_code = 1;
  int64 restaurant = 2;
}

message PromoCodeWithRestaurantIdAndClient {
  string promo_code = 1;
  int64 restaurant = 2;
  int64 client = 3;
}

message ClientId {
  int64 client_id = 1;
}

message TypePromoCodeResponse {
  int64 type = 1;
  string error = 2;
}

message NewCostResponse {
  int64 cost = 1;
  string error = 2;
}

message FreeDeliveryResponse {
  bool have = 1;
  string error = 2;
}

message FreeDishResponse {
  int64 cost = 1;
  int64 dish_id = 2;
  string error = 3;
}

message Error {
  string error = 1;
}

message PromoCodeText {
  string promo_code_text = 1;
  string error = 2;
}

service PromocodeService {
  rpc GetTypePromoCode(PromoCodeWithRestaurantId) returns (TypePromoCodeResponse);
  rpc ActiveFreeDelivery(PromoCodeWithRestaurantId) returns (FreeDeliveryResponse);
  rpc ActiveCostForFreeDish(PromoCodeWithRestaurantId) returns (FreeDishResponse);
  rpc ActiveCostForSale(PromoCodeWithAmount) returns (NewCostResponse);
  rpc ActiveTimeForSale(PromoCodeWithAmount) returns (NewCostResponse);
  rpc AddPromoCode(PromoCodeWithRestaurantIdAndClient) returns (Error);
  rpc GetPromoCode(ClientId) returns (PromoCodeText);
}
